# detcap-public

./: .gitignore  .gitmodules  README.md
detcap/: pyproject.toml
detcap/src/detcap/: __init__.py  acquisition.py  alerting.py  app.py  cli.py  product.py  settings.py  skip.py  utils.py
detcap/src/detcap/data/: ak135_travel_times_P.json  mla.bna  q_factors_P.json
detcap/src/detcap/inventory/: __init__.py  paz.py  station.py
detcap/src/detcap/map/: __init__.py  mb.py  mla.py
docs/: implementation.html  index.html  search.html  searchindex.js
docs/_sources/: installation.rst.txt  operation.rst.txt  troubleshooting.rst.txt
example_config/: config.json  global.txt  local.txt
html_docs/: .buildinfo  genindex.html  installation.html  objects.inv  operation.html  troubleshooting.html  ui.html
html_docs/_sources/: implementation.rst.txt  index.rst.txt  ui.rst.txt
