[project]
name = "detcap"
version = "2.5.4"
description = "Detcap Processing"
authors = [{name = "Brenainn Moushall", email = "brenain.moushall@ga.gov.au"}]
requires-python = ">=3.8"
dependencies = [
    "aioprocessing",
    "apscheduler",
    "click>=8.1.3,<9",
    "cython",
    "eatws_skip_client @ git+https://bitbucket.com/GeoscienceAustralia/eatws-skip-client",
    "geopandas",
    "geojsoncontour",
    "gevent",
    "numpy",
    "obspy",
    "pandas",
    "redis",
    "pyyaml",
    "xmltodict",
    "boto3"
]

[tool.setuptools.package-data]
detcap = ["data/q_factors_P.json", "data/mla.bna", "data/ak135_travel_times_P.json"]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
detcap = "detcap.cli:cli"
